css/style.css
/* reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
}

ul {
    list-style: none;
}

.debug {
    border: 1px solid red;
}

/* color */
:root {
    --color-primary: #141922;
    --color-sidebar: #000000;
    --color-toolbar: #282828;
    --color-secondary: #7D7F84;
    --color-white: #ffffff;
    --color-green: #adff2f;
}

/* general */
body {
    font-family: "Montserrat", sans-serif;
    font-size: 0.9em;
}

.wrapper {
    height: 100vh;
    background-color: var(--color-primary);
    min-width: 576px;
}

main {
width: calc(100% - 200px);
padding: 100px 20px 10px 20px;
color: var(--color-white);
    overflow-y: auto;
}

img {
    width: 100%;
    display: block;
}

.content {
    height: calc(100vh - 90px);
    width: 100%;
}


h2 {
    margin-bottom: 23px;
    font-size: 2em;
}

/* UTILITY */
.btn {
    border: 2px var(--color-white) solid;
    border-radius: 25px;
    padding: 10px 20px;
    text-transform: uppercase;
    color: var(--color-white);
    transition: transform .3s;
}


/* flex utility */
.d-flex {
    display: flex;
}

.just-center {
    justify-content: center;
}

.align-center {
    align-items: center;
    align-content: center;
}

.flex-col {
    flex-direction: column;
}

.between {
    justify-content: space-between;
}

.flex-end{
    justify-content: flex-end;
}

/* header */
.header {
    background-color: #1a1a1a4f;
    color: var(--color-white);
    height: 80px;
    position: fixed;
    top: 0;
    left: 200px;
    z-index: 1000;
    width: calc(100% - 200px);
    padding: 20px 25px 30px 5px;
    justify-content: end;
    align-items: center;
}

.btn:hover {
    transform: scale(1.1);
}

/* nav-bar */
nav {
    /* margin-bottom: 20px; */
}

nav a {
    color: var(--color-secondary);
    font-weight: 500;
}

nav a:hover {
    color: var(--color-white);
}

nav ul a {
    text-transform: uppercase;
    padding: 13px 15px;
}

/* sidebar */
#sidebar {
    background-color: var(--color-sidebar);
    color: var(--color-secondary);
    width: 200px;
    height: 100%;
    overflow-y: auto;
}

/* sidebar */
.logo-side {
    width: 70%;
    margin-bottom: 20px;
    padding-left: 10px;
    padding-top: 10px;
}

.icon-side {
    width: 20%;
    display: none;
}

#sidebar ul li {
    display: flex;
    align-items: center;
}

#sidebar ul li a {
    color: var(--color-secondary);
}

#sidebar ul li a:hover {
    color: var(--color-white);
}

#sidebar ul img {
    width: 30px;
}

.list-top {
    padding-left: 5px;
}

.list-top ul li a {
    border-left: 3px solid rgba(0, 0, 0, 0);
    margin-bottom: 5px;
    font-weight: 600;
}

.list-top ul li:hover {
    border-left: 3px solid var(--color-green);
}


.playlist {
    padding-left: 10px;
}

.playlist h4 {
    text-transform: uppercase;
    color: var(--color-white);
    font-size: 1.3em;
    margin-top: 5px;
    margin-bottom: 5px;
}

.playlist i {
    font-size: 2em;
    padding-right: 5px;
}

.playlist ul li {
    margin-bottom: 15px;
}

.bottom-side img {
    width: 20px;
    /* color: var(--color-secondary); */
}

.bottom-side a {
    color: var(--color-secondary);
    margin-left: 5px;
}
.bottom-side a:hover{
    text-decoration: underline;
    color: var(--color-white);
}

.bord {
    border-bottom: 1px solid var(--color-secondary);
    margin: 10px 10px;
    padding: 6px 0;
}

.profile {
    padding-left: 10px;
    padding-bottom: 5px;
    display: flex;
    align-items: center;
}

.img-profile {
    width: 18px;
    height: 18px;
    background-color: var(--color-secondary);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    overflow: hidden;
}

.profile h5 {
    color: var(--color-white);
    font-size: 1.2em;
    margin: 0 5px;
}

/* section  */
.section-container {
    margin-top: 20px;
}

/* sectio recent */
.row {
    gap: 15px;
}

.card {
    width: calc(100% / 6);
}

.card-img {
    position: relative;
}

.icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 5em;
    display: none;
}

.card-img:hover .icon {
    display: block;
}

.card-img:hover img {
    opacity: 0.5;
    transition: ease 0.2s;
}

.card-title {
    text-align: center;
}

.card-title>* {
    margin: 10px;
}

#recent p {
    color: var(--color-secondary);
}

/* create-for */
#create-for p {
    color: var(--color-secondary);
}

#create-for h2 {
    margin-bottom: 10px;
}

#create-for p {
    margin-bottom: 23px;
}

/* popular */
#popular p {
    margin-bottom: 10px;
}

#popular img {
    width: 100%;
    aspect-ratio: 1 / 1;
    border-radius: 100%;
    overflow: hidden;
}

.icon-rounded {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 5em;
    display: none;
}

.card-img:hover .icon-rounded {
    display: block;
}

/* toolbar */
#toolbar {
    background-color: var(--color-toolbar);
    height: 90px;
    /* width: 100%; */
    padding: 15px 8px;
    color: var(--color-white);
}

.tool-left {
    align-items: center;
    align-content: flex-start;
    width: 20%;
}

.tool-img {
    width: 80px;
}

.tool-left h5{
    font-size: 1.1em;
}

.tool-left span, p{
    color: var(--color-secondary);
}

.played{
    padding-left: 10px;
}

.tool-left-icon{
    padding-left: 15px;
}

.tool-left i{
    color: var(--color-secondary);
    font-size: 1.5em;
    padding: 0 8px;
}

.tool-left i:hover{
    color: var(--color-white);
    cursor: pointer;
}

.tool-center{
    width: 50%;
}

.tool-top-center{
    justify-content: center;
}

.tool-top-center i{
    padding: 0 20px;
    font-size: 1.8em;
}

.play-hover:hover{
    transform: scale(1.5);
}

.tool-bottom-center{
    display: flex;
    justify-content: space-between;
    align-items: center; 
    padding: 10px 0;
}

.bar{
    width: 80%;
    border-bottom: 3px solid var(--color-secondary);
    align-self: center;
}

.tool-right{
    display: flex;
    align-items: center;
    /* justify-content: space-between; */
    width: 20%;
}

.tool-right i{
    font-size: 1.5em;
    padding-right: 25px;
}

.mini-bar{
    width: 100px;
    border-bottom: 3px solid var(--color-secondary);
    align-self: center;
}
/* media query */

@media screen and (max-width: 1200px) {
    nav ul {
        flex-wrap: wrap;
    }

    nav ul li {
        padding: 13px 15px;
    }

    .row {
        flex-wrap: wrap;
    }

    .card {
        width: calc(100% / 4 - 20px);
    }

    .tool-img{
        width: 30%
    }
}

@media screen and (max-width: 992px) {
    .card {
        width: calc(100% / 2 - 20px);
    }

    .tool-left-icon{
        flex-wrap: wrap;
    }

}

@media screen and (max-width: 768px) {
    nav ul li{
        padding: 10px;
    }
    .card {
        width: calc(100% / 2 - 20px);
    }

    .logo-side {
        display: none;
    }

    .icon-side {
        margin: 6px 0 10px 8px;
        display: block;
        width: 25px;
    }

    .playlist {
        display: none;
    }

    .list-top ul li a:last-child {
        display: none;
    }

    #sidebar {
        height: 100%;
        width: 50px;
    }

    .bord a {
        display: none;
    }

    .profile h5 {
        display: none;
    }

    .bord {
        border: none;
    }

    main {
        flex-grow: 1;
    }

    .header {
        left: 50px;
        width: calc(100% - 50px);
    }
    
    .tool-left i{
        font-size: 1.3em;
    }

    .tool-top-center i{
        font-size: 1.5em;
        padding: 0 10px;
    }

    
    .tool-center{
        width: 35%;
    }

    .tool-right{
        width: 40%;
    }

    .tool-right i{
        padding-right: 15px;
    }

    .bar{
        width: 60%;
    }
    
}

@media screen and (max-width: 576px) {
    .card {
        width: calc(100% - 20px);
    }

}

